@@ -1,3 +1,6 @@
+23 Aug 2003 mipsator
+ * added switches support. 
+
 # PMK 0.6 released
 
 23 Aug 2003 mipsator
